<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/baseline_refresh_24"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_explore"
        android:icon="@drawable/baseline_explore_24"
        android:title="@string/explore"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_language"
        android:icon="@drawable/baseline_language_24"
        android:title="@string/language" />

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/baseline_login_24"
        android:title="@string/logout" />

</menu>