<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_user_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_input"
            android:padding="8dp"
            android:text="@string/location"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toBottomOf="@+id/tv_select_desc" />

        <TextView
            android:id="@+id/tv_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_location"
            android:textSize="20sp"
            android:textStyle="bold"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/confirm"
            map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintTop_toBottomOf="@+id/tv_user_location" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/cancel"
            map:layout_constraintBottom_toBottomOf="@+id/btn_confirm"
            map:layout_constraintEnd_toStartOf="@+id/btn_confirm"
            map:layout_constraintTop_toTopOf="@+id/btn_confirm" />

        <TextView
            android:id="@+id/tv_select_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_desc"
            android:textSize="11sp"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toBottomOf="@+id/tv_select" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.upload.LocationActivity" />

</LinearLayout>